--- a/2022/requirements.txt
+++ b/2022/requirements.txt
@@ -12,6 +12,7 @@ jupyter_client==7.4.8
 jupyter_core==5.1.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+numpy==1.23.5
 packaging==22.0
 parso==0.8.3
 pexpect==4.8.0
